# lexai

./: .coverage  .gitattributes  .gitignore  LICENSE  README.md  app.py  dev-requirements.txt  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
embeddings/: README.md
lexai/: __main__.py  config.py
lexai/core/: data_loader.py  match_engine.py  matcher.py
lexai/services/: lexai_service.py  openai_client.py  weaviate_client.py
lexai/ui/: formatters.py  gradio_interface.py
lexai_app/: core.py  main.py
tests/: test_core.py  test_data_loader.py  test_matcher.py  test_openai_client.py
